--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:mysql://localhost:3306/student?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/users?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
